# parallel

lab1/project/: CMakeLists.txt  main.c
lab2/FW_1.2_ALL/FW_1.2_Lin64/: README
lab2/FW_1.2_ALL/FW_1.2_Lin64/lib/: libfwBase.so.1  libfwBase.so.1.2.0  libfwImage.so.1  libfwJPEG.so.1  libfwJPEG.so.1.2.0  libfwSignal.so.1  libfwVideo.so.1  libfwVideo.so.1.2.0
lab2/FW_1.3_Lin64/lib/: libfwBase.so.1  libfwImage.so.1  libfwJPEG.so.1  libfwSignal.so.1  libfwVideo.so.1
lab2/project/: .gdb_history  CMakeLists.txt  enable_ht.sh  main.c
lab2/project/.ccls-cache/@@home@vladimirg@university@parallel@lab1@project/: @opt@llvm-6.0@lib64@clang@6.0.1@include@float.h.blob  @opt@llvm-6.0@lib64@clang@6.0.1@include@stdarg.h.blob  @opt@llvm-6.0@lib64@clang@6.0.1@include@stddef.h.blob  @usr@include@_G_config.h.blob  @usr@include@alloca.h.blob  @usr@include@bits@byteswap-16.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@huge_val.h.blob  @usr@include@bits@huge_valf.h.blob  @usr@include@bits@huge_vall.h.blob  @usr@include@bits@inf.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@mathdef.h.blob  @usr@include@bits@mathinline.h.blob  @usr@include@bits@nan.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@sigset.h.blob  @usr@include@bits@stdio.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@sys_errlist.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@waitflags.h.blob  @usr@include@bits@waitstatus.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@endian.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@libio.h.blob  @usr@include@math.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@sys@cdefs.h.blob  @usr@include@sys@select.h.blob  (+5 more)
lab2/project/.ccls-cache/@@home@vladimirg@university@parallel@lab2@project/: @home@vladimirg@university@parallel@lab2@FW_1.3.1_Lin64@fwBase.h.blob  @opt@llvm-6.0@lib64@clang@6.0.1@include@float.h.blob  @opt@llvm-6.0@lib64@clang@6.0.1@include@stdarg.h.blob  @opt@llvm-6.0@lib64@clang@6.0.1@include@stddef.h.blob  @usr@include@_G_config.h.blob  @usr@include@alloca.h.blob  @usr@include@bits@byteswap-16.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@huge_val.h.blob  @usr@include@bits@huge_valf.h.blob  @usr@include@bits@huge_vall.h.blob  @usr@include@bits@inf.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@mathdef.h.blob  @usr@include@bits@mathinline.h.blob  @usr@include@bits@nan.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@sigset.h.blob  @usr@include@bits@stdio.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@sys_errlist.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@waitflags.h.blob  @usr@include@bits@waitstatus.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@endian.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@libio.h.blob  @usr@include@math.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@sys@cdefs.h.blob  (+6 more)
lab2/project/.ccls-cache/@home@vladimirg@university@parallel@lab1@project/: build@CMakeFiles@3.14.6@CompilerIdC@CMakeCCompilerId.c.blob  build@CMakeFiles@feature_tests.c.blob  main.c  main.c.blob
lab2/project/.ccls-cache/@home@vladimirg@university@parallel@lab2@project/: main.c  main.c.blob
lab3/: report.tex
lab3/project/: CMakeLists.txt  main.c
